--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,12 @@
 /* Add application styles & imports to this file! */
+
+*{
+  margin: 0;
+  padding: 0;
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+a{
+  text-decoration: none;
+}
+
